Creación del rayo y background (#49)

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -54,6 +54,8 @@
 \newcommand{\Z}[0]{\mathbb{Z}}
 \newcommand{\Q}[0]{\mathbb{Q}}
 
+\definecolor{background-blue}{rgb}{0.5,0.7,1.0}
+
 %% Custom Verbatim
 
 \usepackage{mmacells}
