--- a/memoria/tex/capitulos/capitulo-6.tex
+++ b/memoria/tex/capitulos/capitulo-6.tex
@@ -31,6 +31,7 @@ Podemos usar como base el código utilizado para visualizar el cuadrado de color
 % TODO Completar??
 
 \section{El fragment shader}
+\label{section:fs-2D}
 
 Como dijimos al inicio de este capítulo, nuestro vertex shader es trivial, simplemente asigna a \verb|gl_Position| las mismas coordenadas que se introducen desde JavaScript al buffer de posiciones. Es en el fragment shader donde se realiza el grueso de la programación necesaria para poder visualizar los distintos fractales.
 
