Finalizada escena y comenzada camara (#49)

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -24,6 +24,7 @@
 \usepackage{hyperref}
 \usepackage{array}
 \usepackage{verbatim}
+\usepackage{algpseudocode}
 \usepackage[spanish, es-tabla]{babel}
 \decimalpoint
 
